force-app/main/default/objects/Upgrade_Template__c/Upgrade_Template__c.object-meta.xml
<CustomObject>
    <description>Cost template for different class types of car.</description>
    <label>Upgrade Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upgrade Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>