force-app/main/default/objects/Upgrade_Template__c/fields/Rare_Part_Cost__c.field-meta.xml
<CustomField>
    <fullName>Rare_Part_Cost__c</fullName>
    <label>Rare Part Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>