force-app/main/default/objects/Upgrade_Template__c/fields/Stage_10_Cost__c.field-meta.xml
<CustomField>
    <fullName>Stage_10_Cost__c</fullName>
    <label>Stage 10 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>