force-app/main/default/objects/Upgrade_Template__c/fields/Stage_11_Cost__c.field-meta.xml
<CustomField>
    <fullName>Stage_11_Cost__c</fullName>
    <label>Stage 11 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>