force-app/main/default/objects/Upgrade_Template__c/fields/Uncommon_Part_Cost__c.field-meta.xml
<CustomField>
    <fullName>Uncommon_Part_Cost__c</fullName>
    <label>Uncommon Part Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>