force-app/main/default/objects/Upgrade_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage_1_Cost__c</columns>
    <columns>Uncommon_Part_Cost__c</columns>
    <columns>Rare_Part_Cost__c</columns>
    <columns>Epic_Part_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>